<resources>
    <string name="dummy"></string>
    <string name="u_gagein">Gagein</string>
    <string name="people_filters">People Filters</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="employer_info">EMPLOYER INFO</string>
    <string name="build_list">Build a %1$s list</string>
    <string name="select_filters">Select filters to start seeing %1$s results.</string>
    <string name="select_all">Select All</string>
    <string name="location">Location</string>
    <string name="app_name">Gagein</string>
    <string name="welcome">Welcome</string>
    <string name="timing">Timing</string>
    <string name="results">Results</string>
    <string name="filters">Filters</string>
    <string name="deleted">Deleted</string>
    <string name="u_import">Import</string>
    <string name="u_groups">Groups</string>
    <string name="u_rename">Rename</string>
    <string name="u_remove">Remove</string>
    <string name="u_no">No</string>
    <string name="u_yes">Yes</string>
    <string name="u_switch">Switch</string>
    <string name="one_day">1 Day</string>
    <string name="one_week">1 Week</string>
    <string name="one_month">1 Month</string>
    <string name="one_day_score">1 Day Score</string>
    <string name="one_week_score">1 Week Score</string>
    <string name="one_month_score">1 Month Score</string>
    <string name="switch_plan">Switch Plan</string>
    <string name="companies_added">Companies Added</string>
    <string name="account_suspended">Your Account is Suspended</string>
    <string name="account_suspended_pt">The renewal payment of your account was not successfully processed. We are waiting for your account owner to resolve it</string>
    <string name="trial_ended">Your Trial Has Ended</string>
    <string name="trial_ended_pt">Don\'t miss a sales opportunity, choose a subscription plan at gagein.com to continue using Gagein.</string>
    <string name="seat_required">Seat Required</string>
    <string name="seat_required_pt">Contact your team owner to request a seat.</string>
    <string name="your_payment_has_failed">Your Payment Has Failed</string>
    <string name="payment_pt">Your renewal payment was not successfully processed. Please go to gagein.com.</string>
    <string name="resource_page">Resource Pages</string>
    <string name="new_company_submitted">New Company Submitted</string>
    <string name="new_company_submitted_pt">%1$s (%2$s) will be available soon (subject to data availablity).</string>
    <string name="add_to">Add To</string>
    <string name="add_to_group">Add To Group</string>
    <string name="enter_a_company_it_the_us_or_canada">Enter a company in the US or Canada.</string>
    <string name="remove_from_group">Remove from Group</string>
    <string name="remove_from_group_pt">%1$s will be removed from this group, but will remain in \"Followed Companies\".</string>
    <string name="rename_group">Rename Group</string>
    <string name="rename_success">Rename Success</string>
    <string name="u_delete">Delete</string>
    <string name="add_companies">Add Companies</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_group_pt">Are you sure you want to delete the group \"%1$s\"? Your companies will not be unfollowed.</string>
    <string name="group_already">This group already exists.</string>
    <string name="new_group">New Group</string>
    <string name="new_company">New Company</string>
    <string name="new_group_">New Group...</string>
    <string name="linked_companies">Linked Companies</string>
    <string name="import_companies">Import Companies</string>
    <string name="do_not_allow">Don\'t Allow</string>
    <string name="follow_and_group">Follow and Group</string>
    <string name="import_companies_pt">Find and follow your contacts\' employers from the Contacts app.</string>
    <string name="name_length">Names must be 1-32 characters.</string>
    <string name="enter_name_for_group">Enter a name for this group.</string>
    <string name="enter_new_name_for_group">Enter a new name for this group.</string>
    <string name="feedback_success">Feedback Success</string>
    <string name="share_email_subject">Check Out Gagein - Best Sales Prospecting Tool Available</string>
    <string name="share_email_content">I highly recommend award winning Gagein as the best way to find new high value sales prospects. 
        For about the cost of 2 Starbucks ventis a month, Gagein sends me actionable news every day that pinpoints when and why to call my prospects 
        to have the best chance of closing a deal.\n\nClick here to start your free 30 day trial.\n\n</string>
    <string name="share_to_linkedin_url">http://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.gagein.com%2Freferral%2F%3Ft%3D1407219729555%26source%3Dsln100%26owner%3D32030%26shareid%3D2502</string>
    <string name="share_to_twitter_url">https://twitter.com/intent/tweet?text=I%27m%20finding%20high%20value%20sales%20prospects%20with%20Gagein.%20Get%20your%20FREE%20account%20today%3A%20http%3A%2F%2Fbit.ly%2FUPWxFH&amp;source=webclient</string>
    <string name="share_to_facebook_url">https://www.facebook.com/login.php?next=https%3A%2F%2Fwww.facebook.com%2Fsharer%2Fsharer.php%3Fu%3Dhttp%253A%252F%252Fwww.gagein.com%252Freferral%252F%253Ft%253D1407219729555%2526source%253Dsfb100%2526owner%253D32030%2526shareid%253D2505&amp;display=popup</string>
    <string name="share_to_googleplus_url">https://plus.google.com/share?url=http%3A%2F%2Fwww.gagein.com%2Freferral%2F%3Ft%3D1407219729555%26source%3Dsgp100%26owner%3D32030%26shareid%3D2506</string>
    <string name="general_comment">General Comment</string>
    <string name="u_question">Question</string>
    <string name="u_bug">Bug</string>
    <string name="u_improvement">Improvement</string>
    <string name="new_feature_request">New Feature Request</string>
    <string name="u_close">Close</string>
    <string name="u_view">View</string>
    <string name="u_minor">Minor</string>
    <string name="u_major">Major</string>
    <string name="u_critical">Critical</string>
    <string name="u_category">Category</string>
    <string name="u_importance">Importance</string>
    <string name="requiry_category">A category is required to send feedback.</string>
    <string name="requiry_message">A message is required to send feedback.</string>
    <string name="requiry_subject">A subject is required to send feedback.</string>
    <string name="share_pt">Each credit guarantees expedited 1 business day provisioning for one company, with credits automatically applied to your longest waiting companies.</string>
    <string name="resulting_from_share">resulting from share</string>
    <string name="jump_the_queue">Jump the Queue</string>
    <string name="share_gagein_get_provisioned">Share Gagein and get your companies provisioned quicker!</string>
    <string name="refer_gagein_to_friends">Refer Gagein to friends and get 1 month free for each if they buy a subscription. No limit!</string>
    <string name="select_triggers">Select the sales triggers you want to receive updates about.</string>
    <string name="select_triggers_linking">Select the sales triggers you want to receive updates about. Liking news stories allows you to see a chart of your most relevant sales triggers.</string>
    <string name="u_rate">Rate</string>
    <string name="u_confirm">Confirm</string>
    <string name="switch_accounts">Switch Accounts</string>
    <string name="u_account">Account</string>
    <string name="feedback">Feedback</string>
    <string name="copyright">© %1$s Gagein, Inc.</string>
    <string name="version_code">Version %1$s</string>
    <string name="triggerchart">Triggerchart</string>
    <string name="price_for_yearly">$99.99 Yearly (2 months free)</string>
    <string name="price_for_month">$9.99 Monthly</string>
    <string name="upgrade_to_gagein_pro">Upgrade to Gagein Pro</string>
    <string name="pro_upgrade">Upgrade to find high value prospects with List Builders and Saved Searches. Choose from a monthly or yearly subscription.</string>
    <string name="pro_upgrade_trial">Your 30 day free trial is over. If you wish to continue using Gagein Pro, choose from a monthly or yearly subscription.</string>
    <string name="pro_upgrade_expire">Your current subscription has expired. If you wish to continue using Gagein Pro, choose from a monthly or yearly subscription.</string>
    <string name="thank_you">Thank you</string>
    <string name="purchase_successful">Your purchase was successful.</string>
    <string name="confirm_subscription">Confirm Subscription</string>
    <string name="confirm_subscription_one_month">Do you want to subscribe to Gagein Pro for 1 month for $9.99? This subscription will automatically renew until canceled.</string>
    <string name="confirm_subscription_one_year">Do you want to subscribe to Gagein Pro for 1 year for $99.99? This subscription will automatically renew until canceled.</string>
    <string name="free_trial">30 Day Free Trial</string>
    <string name="free_trial_pt">Finding high value prospects with List Builders and Saved Searches are features of Gagein Pro. Try it for 30 days free.</string>
    <string name="buy_now">Buy Now</string>
    <string name="pending_companies">Pending Companies</string>
    <string name="pending_company">Pending Company</string>
    <string name="pending_company_converted">Pending company converted</string>
    <string name="company_added">Company added</string>
    <string name="convert">Convert or they\'ll be removed 30 days from import</string>
    <string name="rate_gagein">Rate Gagein</string>
    <string name="rate_pt">If you enjoy using Gagein, please take a moment to rate it. We work hard and appreciate your support!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="select_least_one_trigger">You must select at least one trigger.</string>
    <string name="no_saved_company_searches">You have no saved company searches</string>
    <string name="saved_searchs">SAVED SEARCHES</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="in_the_past">IN THE PAST</string>
    <string name="sub_industry">SUB-INDUSTRY</string>
    <string name="added_success">Added Success</string>
    <string name="enter_pending_name_and_website">Enter the name and the website for this company.</string>
    <string name="company_info">COMPANY INFO</string>
    <string name="u_news">News</string>
    <string name="company_name">Company Name</string>
    <string name="company_website">Company Website</string>
    <string name="u_about">About</string>
    <string name="u_people">People</string>
    <string name="u_competitors">Competitors</string>
    <string name="u_companies">Companies</string>
    <string name="u_website">Website</string>
    <string name="revenue_size">Revenue Size</string>
    <string name="employee_size">Employee Size</string>
    <string name="report_error">Report Error</string>
    <string name="matches">Select the company that matches %1$s</string>
    <string name="enter_website">Or enter the website for %1$s</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="industry">Industry</string>
    <string name="ownership">Ownership</string>
    <string name="u_save">Save</string>
    <string name="news_triggers">News triggers</string>
    <string name="headquarters">Headquarters</string>
    <string name="milestone">Milestone</string>
    <string name="rank">Rank</string>
    <string name="fiscal_year_end">Fiscal Year End</string>
    <string name="triggerchart_almost_activated">Triggerchart Almost Activated</string>
    <string name="linking_news_stories">Liking news stories allows you to see a chart of your most relevant sales triggers.</string>
    <string name="follow">Follow</string>
</resources>