<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:weightSum="4" >

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/u_news"
            android:textSize="16sp"
            android:textColor="@drawable/text_section_color"
            />
        
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/u_about"
            android:textSize="16sp"
            android:textColor="@drawable/text_section_color"
            />
        
        <TextView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/u_people"
            android:textSize="16sp"
            android:textColor="@drawable/text_section_color"
            />
        
        <TextView
            android:id="@+id/competitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal"
            android:text="@string/u_competitors"
            android:textSize="16sp"
            android:textColor="@drawable/text_section_color"
            />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/filters"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:background="@null"
        />

</LinearLayout>